# hextractor

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  README.md  environment.yml  mkdocs.yml  paper.bib  paper.md  pyproject.toml  setup_project.sh
.github/workflows/: build_and_test.yml  draft-pdf.yml
docs/: concepts.md  contributing.md  examples.md  index.md
docs/reference/: data_sources.md  extraction.md  integrations.md  structures.md  visualization.md
examples/: __init__.py  data.py  data_convestion_example.ipynb  multi_table.py  single_table.py  utils.py
hextractor/: data_sources.py  extraction.py  structures.py  utils.py  visualization.py
hextractor/examples/: __init__.py  data.py  multi_table.py  single_table.py  utils.py
hextractor/integrations/: langchain_graphdoc.py
notebooks/: debug.ipynb
notebooks/examples/: companies.html  data_visualization.ipynb  langgraph_integration.ipynb  llm_graph.html  simple_viz.html  tabular_data_processing.ipynb
tests/: test_data_sources.py  test_integrations.py  test_structures.py  test_utils.py  test_visualization.py
