[tool.poetry]
name = "hextractor"
version = "0.1.0"
description = ""
authors = ["Filip <filip.wojcik@outlook.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
torch-geometric = "^2.5.3"
torch = "^2.3.1"
pydantic = "^2.7.3"
black = "^24.4.2"

[tool.poetry.group.research]
optional = true

[tool.poetry.group.research.dependencies]
jupyterlab = "^4.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
