[tool.poetry]
name = "hextractor"
version = "0.1.0"
description = ""
authors = ["Filip <filip.wojcik@outlook.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
torch-geometric = "^2.5.3"
torch = "^2.3.1"
pydantic = "^2.7.3"
black = "^24.4.2"
pandas = "^2.2.2"
autoroot = "^1.0.0"

[tool.poetry.group.research]
optional = true

[tool.poetry.group.research.dependencies]
jupyterlab = "^4.2.1"
rootutils = "^1.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.10"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
deptree = "^0.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
